# datascience-pro-cookiecutter

./: .gitlab-ci.yml  README.md  cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .bashrc  .gitignore  .projectrc  LICENCE.txt  README.md  pyproject.toml  tox.ini
{{ cookiecutter.project_slug }}/.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
