[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^0.10.0"
polars = "^0.20.8"
pyarrow = "^15.0.0"
pandas = "^2.2.3"
plotly-express = "^0.4.1"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
ipywidgets = "^8.1.5"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0" 
pytest-sugar = "*"  
pytest-cov = "*"  
black = "*"  
mypy = "*"  
ruff = "*"  
isort = "*" 
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
